# shell_bt_nus

./: .gitignore  CMakeLists.txt  prj.conf  sample.yaml
boards/arm/ms88sf2/: Kconfig  Kconfig.board  Kconfig.defconfig  board.cmake  ms88sf2-pinctrl.dtsi  ms88sf2.dts  ms88sf2.yaml  ms88sf2_defconfig  pre_dt_board.cmake
src/: main.c
